src/test/deca/syntax/invalid/braces_en_trop.deca
// Description:
//    Il y a des braces en trop
//
// Resultats:
//    Erreur du parser ligne 12
//
// Historique:
//    Cree le 09/01/2024

{
    { int x = 2;}
}